syntax = "proto3";

option go_package = "notifierpb";
package notifier;

import "billing/billing.proto";

service NotifierService {
    rpc CheckUser(CheckUserRequest) returns (CheckUserResponse) {}
}

message CheckUserRequest {
    string url = 1;
    billing.OrderUser user = 2;
    string secret_key = 3;
    bool is_live_project = 4;
}

message CheckUserResponse {
    int32 status = 1;
    string message = 2;
}

message User {
    // @inject_tag: json:"project_account"
    string project_account = 1;
    // @inject_tag: json:"name"
    string name = 2;
    // @inject_tag: json:"email"
    string email = 3;
    // @inject_tag: json:"phone"
    string phone = 4;
    // @inject_tag: json:"metadata"
    map<string, string> metadata = 5;
}
